--- a/sent.1
+++ b/sent.1
@@ -48,6 +48,8 @@ Go to previous slide, if existent.
 Quit.
 .It Sy r
 Reload the slides. Only works on file input.
+.It Sy x
+Toggle mouse cursor inside the window.
 .It Sy Right | Return | Space | l | j | Down | Next | n
 Go to next slide, if existent.
 .It Sy Left | Backspace | h | k | Up | Prior | p
