--- a/sent.1
+++ b/sent.1
@@ -9,6 +9,7 @@
 .Op Fl c Ar fgcolor
 .Op Fl b Ar bgcolor
 .Op Fl v
+.Op Fl i
 .Op Ar file
 .Sh DESCRIPTION
 .Nm
@@ -24,6 +25,8 @@ few minutes.
 .Bl -tag -width Ds
 .It Fl v
 Print version information to stdout and exit.
+.It Fl i
+Use the colors from the inverted color array.
 .It Fl f Ar font
 Defines the
 .Ar font
